[#540], [#18], [#80153700]: styles convo and code, fixed overflow landing text, fixed system scroll

--- a/app/stylesheets/less/blocks/bricks.less
+++ b/app/stylesheets/less/blocks/bricks.less
@@ -247,3 +247,9 @@
     padding: @brick-padding-vertical (@brick-padding-horizontal + 5);
   }
 }
+
+.brick--code {
+  .brick__body {
+    font-family: @font-family-monospace;
+  }
+}
