--- a/app/stylesheets/less/blocks/confirmation.less
+++ b/app/stylesheets/less/blocks/confirmation.less
@@ -6,6 +6,7 @@
   left: 0;
   background-color: @confirmation-overlay-bg;
   text-align: center;
+  overflow: auto;
   z-index: @zindex-popup;
 
   .button {
@@ -44,9 +45,9 @@
 }
 
 .confirmation__box {
+  padding: 20px 0;
   position: relative;
   color: @white;
-  overflow: auto;
 }
 
 .confirmation__text {
