--- a/app/stylesheets/less/blocks/posts.less
+++ b/app/stylesheets/less/blocks/posts.less
@@ -205,6 +205,25 @@
   }
 }
 
+.post--code {
+  .post__content {
+    font-family: @font-family-monospace;
+  }
+}
+
+.convo {
+  [class^=person_] {
+    margin: .4em 0;
+    font-size: .9em;
+
+
+    span {
+      text-transform: uppercase;
+      letter-spacing: .1em;
+    }
+  }
+}
+
 .post--edit {
   width: 100%;
   min-height: 300px;
