--- a/app/stylesheets/less/variables.less
+++ b/app/stylesheets/less/variables.less
@@ -19,6 +19,7 @@
 @font-family-sans-serif: 'PT Sans', Arial, 'Helvetica Neue', Helvetica, sans-serif;
 @font-family-base: 'Proxima Nova', Arial, 'Helvetica Neue', Helvetica, sans-serif;
 @font-family-base-light: 'Proxima Nova Light', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+@font-family-monospace: monospace;
 
 @font-size-base: 18px;
 @font-size-small: ceil((@font-size-base * 0.65)); // ~14px
